ui_tests/all_missing_err.stderr
error: In this function, all references must be annotated with a lifetime.
 --> ui_tests/all_missing_err.rs:4:16
  |
4 | fn identity(a: &i32, _b: &i32) -> &i32 {
  |                ^

error: In this function, all references must be annotated with a lifetime.
 --> ui_tests/all_missing_err.rs:4:26
  |
4 | fn identity(a: &i32, _b: &i32) -> &i32 {
  |                          ^

error: In this function, all references must be annotated with a lifetime.
 --> ui_tests/all_missing_err.rs:4:35
  |
4 | fn identity(a: &i32, _b: &i32) -> &i32 {
  |                                   ^
